<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F7FA"
    tools:context=".Major_Activities.Edit_Profile">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_profile_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/edit_profile_title"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close_edit_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_close_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_top"
        android:background="@drawable/shapable_back"
        android:elevation="20dp"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:elevation="5dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/shape_circle"
                        android:elevation="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_edit_24" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fname_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                        android:hint="@string/fname_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:id="@+id/fname"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lname_txt"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lname"
                        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                        android:hint="@string/lname_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_txt"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_phone_enabled_24"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:id="@+id/phone"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/pass_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:hint="@string/pass_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor"
                        android:id="@+id/password"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/cpass_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:hint="@string/cpass_hint"
                        android:inputType="textPassword"
                        android:drawablePadding="8dp"
                        android:id="@+id/cpassword"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_txt"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/bio"
                        android:hint="@string/bio_hint"
                        android:gravity="start"
                        android:drawablePadding="8dp"
                        android:inputType="textMultiLine"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />


                    <Button
                        android:id="@+id/update_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/shapable_recatngle"
                        android:padding="5dp"
                        android:elevation="10dp"
                        android:text="@string/update_btn"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>