<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Initial_Activities.SignUp_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/start1_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/arrow"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup_welcome_txt"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/start1_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/start1_heading"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/signup_welcome_content"
                    android:textColor="#808080"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/mail_pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/start1_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fname_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                        android:hint="@string/fname_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:id="@+id/fname"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/lname_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                        android:hint="@string/lname_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="#808080"
                        android:id="@+id/lname"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/email_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                        android:hint="@string/email_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textColor"
                        android:id="@+id/email"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/pass_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:hint="@string/pass_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor"
                        android:id="@+id/password"
                        android:drawablePadding="8dp"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/cpass_txt"
                        android:textColor="@color/appClr2"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:hint="@string/cpass_hint"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor"
                        android:id="@+id/cpassword"
                        android:textColorHint="#808080"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_remeber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mail_pass_layout"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/remember_txt"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/shape_form_field01"
                        android:enabled="true"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="Switch" />


                </LinearLayout>

                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_remeber"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shapable_recatngle"
                    android:padding="5dp"
                    android:elevation="10dp"
                    android:text="@string/signup_btn"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>