<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Initial_Activities.OTP_Number_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <TextView
            android:id="@+id/start1_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/otp_welcome_txt"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start1_heading"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/otp_welcome_description"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/shapable_recatngle"
            android:elevation="10dp"
            android:text="@string/continue_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelCountryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start1_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_country_btn"
            android:textColor="@color/appClr2"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelCountryTv"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_form_field01"
                android:gravity="center_vertical"
                android:padding="8dp"
                app:ccpDialog_backgroundColor="@color/backgroundColor"
                app:ccpDialog_textColor="@color/textColor"
                app:ccp_arrowColor="@color/appClr2"
                app:ccp_autoDetectCountry="true"
                app:ccp_hintExampleNumber="true"
                app:ccp_hintExampleNumberType="MOBILE"
                app:ccp_rememberLastSelection="true"
                app:ccp_showArrow="false"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textGravity="LEFT"
                app:ccp_textSize="12sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="#616161" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>